--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Philfolio</title><base href="/philipp-klug/"><!-- Google Analytics --><script type="text/javascript">var gaProperty = 'UA-114229832-1'; 
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Philfolio</title><base href="/philipp-klug.github.io"><!-- Google Analytics --><script type="text/javascript">var gaProperty = 'UA-114229832-1'; 
       var disableStr = 'ga-disable-' + gaProperty; 
       if (document.cookie.indexOf(disableStr + '=true') > -1) 
       { window[disableStr] = true; } 
